# SRE

./: 1539.csv  X1_C120170808-20180808.csv
sv/: .gitignore  README.md
sv/data/svbp/: sv.conf
sv/data/svbp/mdl/: vad.cfg  vad_8000.conf  vad_8000.mdl
sv/data/svbp/mdl512/: final.ubm  lda_plda  (+3 more)
sv/data/vadbp/: sv.conf  vad.ark  vad.scp  wav.scp
sv/include/: als_aec_processor.h  als_audio_segment.h  als_error.h  als_gen_lm.h  als_grammar.h  als_itn.h  als_itn_singleton.h  als_jsgf_grammar.h  als_kws_feat_dumper.h  als_kws_grammar.h  als_kws_recognizer.h  als_kws_result.h  als_punc_tagger.h  als_punc_tagger_singleton.h  als_recognizer.h  als_recognizer_result.h  als_rescore_grammar.h  als_si.h  als_sig_process.h  als_speech_recognition.h  als_sv.h  als_vad.h  als_vad_result.h  als_vadc.h  alxnn.h  config.h  sphinx_config.h
sv/include/sphinxbase/: jsgf.h  sphinxbase_export.h
sv/lib/src/core/spkdiar/: Makefile.am  ahc.cpp  ahc.h  bic.h  config.h  denoise.h  diag_gmm.cpp  diag_gmm.h  frame_posterior.cpp  frame_posterior.h  full_gaussian.h  full_gmm.cpp  full_gmm.h  full_gmm_normal.h  full_gmm_trainer.h  ivector_estimator.cpp  ivector_estimator.h  ivector_extract_pipeline.h  ivector_extract_pipeline_new.cpp  ivector_extract_pipeline_new.h  ivector_transform.h  mfcc.cpp  mfcc.h  new_matrix.h  new_vector.h  plda.h  posterior.h  resource_loader.h  resource_manager.h  seg.h  speaker_cluster.h  spkdiar.cpp  spkdiar.h  spkdiar_impl.cpp  spkdiar_impl.h  spkdiar_result.h  spkdiar_serialize.h  spkdiar_tunning.h  utterance_stats.cpp  utterance_stats.h  (+5 more)
sv/msvc/: sverifier.sln
(+211 files in other folders)
